syntax = "proto3";
package Chat;

service ChatService {
    rpc ChatA (stream Request) returns (stream Response);
    rpc ChatB (stream Request) returns (stream Response);
    rpc ChatC (stream Request) returns (stream Response);
}

message Request {
    string tag = 1;
    string mess = 2;
}

message Response {
    string mess = 2;
}